# CY_vibecoding

./: .gitignore  README.md  pyproject.toml
deploy/: cyprof.yaml  cyprofiled.service
src/cyprof/: __init__.py  cli.py  collector.py  config.py  daemon.py  flamegraph.py  query.py  storage.py
tests/: test_cli.py  test_collector.py  test_config.py  test_daemon.py  test_flamegraph.py  test_query.py  test_storage.py
